개인 챗봇, AI 수정